<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.codeforiraq.safety.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/aid_text_view"
                style="@style/custom"
                android:background="@drawable/aid_text_view_bg"
                android:text="@string/aid_text" />

            <Button
                android:id="@+id/about_text_view"
                style="@style/custom"
                android:background="@drawable/aid_text_view_bg"
                android:text="@string/about_text" />

            <Button
                android:id="@+id/logout_text_view"
                style="@style/custom"
                android:background="@drawable/aid_text_view_bg"
                android:text="@string/logout_text" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
