<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="org.codeforiraq.safety.About_Activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/code_for_iraq"
                style="@style/text_style_about"
                android:text="@string/code_for_iraq" />

            <View
                android:id="@+id/line1"
                style="@style/line_style_about"
                android:layout_below="@+id/code_for_iraq" />

            <TextView
                android:id="@+id/developer_app"
                style="@style/text_style_about"
                android:layout_below="@+id/line1"
                android:text="@string/developer_app" />

            <View
                android:id="@+id/line2"
                style="@style/line_style_about"
                android:layout_below="@+id/developer_app" />

            <TextView
                android:id="@+id/about_app"
                style="@style/text_style_about"
                android:layout_below="@+id/line2"
                android:text="@string/about_app" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
